# ApprentissageOpenGL

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
includes/glfw/_glfwBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
includes/glfw/_glfwBuild/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
includes/glfw/_glfwBuild/src/: Makefile  cmake_install.cmake
includes/glfw/_glfwBuild/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/: main.cpp
src/lib/logger/: Logger.cpp  Logger.hpp
